# hsQueens

./: README.md  hsQueens.cabal
src/: Parser.hs  memory-test.hs  queens.hs
