name:     hsQueens
version:  0.1
build-type:     Simple
cabal-version:  >= 1.2

executable hsQueens 
  build-depends:  transformers, time, old-locale, base >= 4.6, rosezipper >= 0.2, haskeline >= 0.7, containers, parsec >= 3.0
  main-is:        queens.hs
  ghc-options:     -Wall -O2 -threaded
  hs-source-dirs: src
